# text-toolkit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
samples/: numbers.txt  prose.txt
src/: casing.rs  dedup.rs  freq.rs  lib.rs  main.rs  number.rs  replace.rs  sort.rs  trim.rs  wc.rs  wrap.rs
tests/: cli.rs
